<resources>
    <string name="app_name">Spinner&amp;ListView180201</string>

    <string-array name="seasons">
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn</item>
        <item>Winter</item>
    </string-array>

    <string-array name="tickets">
        <item>Adult</item>
        <item>Retired</item>
        <item>Children</item>
    </string-array>

    <string-array name="time">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>

    <string-array name="sport">
        <item>Walk</item>
        <item>Running</item>
        <item>Swimming</item>
    </string-array>

    <string-array name="food">
        <item>Chicken</item>
        <item>Pork</item>
        <item>Fish</item>
        <item>Vegetable</item>
    </string-array>
    <string name="msgTxv">Place your order, please.</string>

    <string name="weight">Weight</string>
    <string name="timeSpan">Time</string>
    <string name="calc">Calculate</string>
    <string name="total">Total:</string>
    <string name="txvRate">Energy consumption:</string>

    <string name="text">No order</string>
    <string name="button">Place order</string>
    <string name="toCinemaTicket">To cinema tickets</string>
    <string-array name="drinkname">
        <item>Perl Tea</item>
        <item>Milk Tea</item>
        <item>Cold Red Tea</item>
        <item>Lemon Tea</item>
    </string-array>
    <string name="makeOrder">Confirm Order</string>

</resources>
